fix(pibss): stretch form and splashScreen to fill
prevent footer from being visible during forms, as the footer animations
may appear half-animated due to their awkward height

--- a/src/assets/styles/pibss.css
+++ b/src/assets/styles/pibss.css
@@ -200,8 +200,12 @@ section.login-form {
 .disclaimer-text {
   font-size: 2rem;
 }
+.splash-screen {
+  min-height: 70vh;
+}
 section.form {
   padding-top: 0;
+  min-height: 50vh;
 }
 .form-step-button-wrapper {
   margin: -1rem 0 1rem;
@@ -251,11 +255,11 @@ section.form {
   margin-top: 1rem;
   font-size: 1.5rem;
 }
-.register-intro-text {
+.splash-screen-text {
   font-size: 2rem;
   margin-bottom: 2rem;
 }
-.register-start-button {
+.splash-screen-start-button {
   margin: 0 auto;
 }
 .register-submit-name-button {
@@ -438,10 +442,10 @@ button.update-location-submit-button {
     width: 100%;
     font-size: 1.5rem;
   }
-  .register-intro-title {
+  .splash-screen-title {
     font-size: 2.5rem;
   }
-  .register-intro-text {
+  .splash-screen-text {
     font-size: 1.25rem;
   }
   .note {
